--- a/app.env
+++ b/app.env
@@ -1,3 +1,5 @@
 DB_DRIVER=postgres
-DB_SOURCE=postgresql://postgres:postgres@db:5432/postgres?sslmode=disable
-SERVER_ADDRESS=0.0.0.0:8080
+DB_SOURCE=postgresql://postgres:postgres@localhost:5432/kahoot?sslmode=disable
+SERVER_ADDRESS=localhost:8080
+
+JWT_SECRET_KEY="my_secret_key"
