--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,13 @@ services:
     build: .
     ports:
       - "8080:8080"
-    environment:
-      PORT: 8080
+    networks:
+      - new
     env_file:
       - app.env
+    environment:
+      DB_SOURCE: postgres://postgres:postgres@database:5432/postgres?sslmode=disable
+      SERVER_ADDRESS: 0.0.0.0:8080
     depends_on:
       db:
         condition: service_healthy
@@ -24,7 +27,7 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: postgres
     ports:
-      - "5432:5432" 
+      - "5432" 
     healthcheck:
       test: pg_isready -U postgres -d postgres
       interval: 10s
