feat: login and refresh

--- a/app.env
+++ b/app.env
@@ -3,3 +3,5 @@ DB_SOURCE=postgresql://postgres:postgres@localhost:5432/kahoot?sslmode=disable
 SERVER_ADDRESS=localhost:8080
 
 JWT_SECRET_KEY="my_secret_key"
+ACCESS_TOKEN_EXPIRED_TIME=12
+REFRESH_TOKEN_EXPIRED_TIME=48
