chore: clean code

--- a/app.env
+++ b/app.env
@@ -1,5 +1,5 @@
 DB_DRIVER=postgres
-DB_SOURCE=postgresql://postgres:postgres@localhost:5432/kahoot?sslmode=disable
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/kahoot?sslmode=disable
 SERVER_ADDRESS=localhost:8080
 
 JWT_SECRET_KEY="my_secret_key"
