--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.3"
 
 services:
   api:
+    container_name: api
     build: .
     ports:
       - "8080:8080"
@@ -10,12 +11,13 @@ services:
     env_file:
       - app.env
     environment:
-      DB_SOURCE: postgres://postgres:postgres@database:5432/postgres?sslmode=disable
+      DATABASE_URL: postgres://postgres:postgres@database:5432/postgres?sslmode=disable
       SERVER_ADDRESS: 0.0.0.0:8080
     depends_on:
       db:
         condition: service_healthy
   db:
+    container_name: database
     image: postgres:13.3-alpine
     restart: always
     networks:
@@ -34,6 +36,7 @@ services:
       timeout: 3s
       retries: 5
   migrate:
+    container_name: migrate
     image: migrate/migrate
     networks:
       - new
