chore: fix port

--- a/app.env
+++ b/app.env
@@ -1,6 +1,7 @@
 DB_DRIVER=postgres
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/kahoot?sslmode=disable
-SERVER_ADDRESS=localhost:8080
+SERVER_ADDRESS=localhost
+PORT=8080
 
 JWT_SECRET_KEY="my_secret_key"
 ACCESS_TOKEN_EXPIRED_TIME=12
