--- a/app.env
+++ b/app.env
@@ -1,8 +1,15 @@
 DB_DRIVER=postgres
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/kahoot?sslmode=disable
-SERVER_ADDRESS=localhost
+HOST=localhost
 PORT=8080
+SERVER_ADDRESS=http://localhost:8080
 
 JWT_SECRET_KEY="my_secret_key"
 ACCESS_TOKEN_EXPIRED_TIME=12
 REFRESH_TOKEN_EXPIRED_TIME=48
+
+FB_KEY=695213078979005
+FB_SECRET=5f1009ef55f195bc07485943f4d69cd1
+
+GLE_KEY=205589624061-qlokit6v0uaf78l1dhktm1efnbvqavud.apps.googleusercontent.com
+GLE_SECRET=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
