--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - app.env
     environment:
       DATABASE_URL: postgres://postgres:postgres@database:5432/postgres?sslmode=disable
-      SERVER_ADDRESS: 0.0.0.0
+      HOST: 0.0.0.0
       PORT: 8080
     depends_on:
       db:
