--- a/app.env
+++ b/app.env
@@ -8,3 +8,12 @@ FRONTEND_ADDRESS=http://localhost:3000
 JWT_SECRET_KEY="my_secret_key"
 ACCESS_TOKEN_EXPIRED_TIME=12
 REFRESH_TOKEN_EXPIRED_TIME=48
+
+FB_KEY=secret
+FB_SECRET=secret
+
+GLE_KEY=secret
+GLE_SECRET=secret
+
+SENDGRID_API_KEY=secret
+SENDGRID_EMAIL=secret
