--- a/app.env
+++ b/app.env
@@ -8,6 +8,7 @@ FRONTEND_ADDRESS=http://localhost:3000
 JWT_SECRET_KEY="my_secret_key"
 ACCESS_TOKEN_EXPIRED_TIME=12
 REFRESH_TOKEN_EXPIRED_TIME=48
+ENV=PROD
 
 FB_KEY=secret
 FB_SECRET=secret
